--- a/index.html
+++ b/index.html
@@ -1,28 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | QR code component</title>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <title>Frontend Mentor | QR code component</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+    <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
+    <style>
+      :root {
+        --baby-blue: #89cff0;
+        --white: hsl(0, 0%, 100%);
+        --slate-300: hsl(212, 45%, 89%);
+        --slate-500: hsl(216, 15%, 48%);
+        --slate-900: hsla(217, 45%, 22%, 1);
+        --text-preset-1: ;
+      }
+      body,
+      html {
+        height: 100%;
+        background-color: var(--slate-300);
+      }
+      .container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+        gap: 20px;
+      }
+      .card {
+        font-size: 1px;
+        width: 288px;
+        background-color: var(--white);
+        padding: 16px 16px 40px 16px;
+        border-radius: 20px;
+        text-align: center;
+      }
+      .qr-img {
+        width: 288px;
+        height: 288px;
+        border-radius: 10px;
+      }
+      /* TEXT STYLES--------------- */
+      .attribution {
+        font-size: 11px;
+        text-align: center;
+      }
+      .attribution a {
+        color: hsl(228, 45%, 44%);
+      }
+      .card-title {
+        color: var(--slate-900);
+        font-family: "Outfit", sans-serif;
+        font-size: 22px;
+        font-weight: bold;
+        line-height: 120%;
+        letter-spacing: 0px;
+      }
+      .card-subtitle {
+        color: var(--slate-500);
+        font-family: "Outfit", sans-serif;
+        font-size: 15px;
+        font-weight: 400;
+        line-height: 140%;
+        letter-spacing: 0.2px;
+      }
+    </style>
+  </head>
+  <body>
+    <main class="container">
+      <div class="card">
+        <img
+          src="images/image-qr-code.png"
+          alt="qr for frontend mentor"
+          class="qr-img"
+        />
+        <p class="card-title">
+          Improve your front-end skills by building projects
+        </p>
+        <p class="card-subtitle">
+          Scan the QR code to visit Frontend Mentor and take your coding skills
+          to the next level
+        </p>
+      </div>
 
-  Improve your front-end skills by building projects
-
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by
+        <a href="https://github.com/mailee00" target="_blank">Mai Lee</a>.
+      </div>
+    </main>
+  </body>
 </html>
